--- a/client/src/res/sass/main.scss
+++ b/client/src/res/sass/main.scss
@@ -9,6 +9,8 @@
 @import "layout/content";
 @import "layout/header";
 @import "components/small-components";
+@import "components/headerProfile";
+@import "components/searchBar";
 
 // @import "base/animations";
 @import "base/base";
