--- a/client/src/res/css/style.css
+++ b/client/src/res/css/style.css
@@ -68,51 +68,132 @@ ORDER: Base + Typography > General layout + Grid > Page layout > Components
   margin: 8rem auto;
   background-color: var(--color-grey-light-2);
   box-shadow: var(--shadow-dark);
-  min-height: 150rem; }
+  min-height: 50rem; }
 
 .sidebar {
   background-color: var(--color-grey-dark-3);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+
+.side-nav__icon {
+  width: 2.75rem;
+  height: 2.75rem; }
+
+.legal {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem;
+  color: var(--color-grey-light-4); }
 
 .hotel-view {
   background-color: #dd4d4d;
-  flex: 1; }
+  flex: 1;
+  height: 50rem; }
 
 .content {
   display: flex; }
 
 .header {
-  height: 30rem;
+  font-size: 1.4rem;
+  height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2); }
-  .header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem; }
-  .header__logo {
-    height: 3.5rem; }
-  .header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
+  border-bottom: var(--color-grey-light-2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
 
 .logo {
-  height: 3.25rem; }
+  height: 4rem;
+  transform: translateY(-0.75rem);
+  margin-left: 2rem; }
 
-.search__icon {
-  height: 2rem;
-  width: 2rem; }
+.user-nav {
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+  position: relative; }
+  .user-nav > * {
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    align-items: center; }
+  .user-nav > *:hover {
+    background-color: var(--color-grey-light-2); }
+  .user-nav__icon-box {
+    padding: 0 2.5rem;
+    position: relative; }
+  .user-nav__icon-box::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .user-nav__icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 2.5rem;
+    width: 2.5rem;
+    fill: var(--color-grey-dark); }
+  .user-nav__notification {
+    z-index: 1000;
+    font-size: 1rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color: var(--color-primary-dark);
+    color: #fff;
+    position: absolute;
+    top: 1.5rem;
+    right: .6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .user-nav__user {
+    padding: 0 2rem 0 2rem; }
+  .user-nav__user-photo {
+    border-radius: 50%;
+    height: 3rem;
+    width: 3rem;
+    margin-right: 0.25rem; }
 
-.user-nav__icon {
-  height: 2.5rem;
-  width: 2.5rem; }
-
-.user-nav__user-photo {
-  border-radius: 50%;
-  height: 3rem;
-  width: 3rem; }
+.search {
+  flex: 0 0 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .search__input {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: var(--color-grey-light-2);
+    border: none;
+    padding: .7rem 2rem;
+    border-radius: 100px;
+    width: 90%;
+    transition: all .2s;
+    margin-right: -3.25rem; }
+    .search__input:focus {
+      outline: none;
+      width: 100%;
+      background-color: var(--color-grey-light-3); }
+    .search__input::-webkit-input-placeholder {
+      font-weight: 100;
+      color: var(--color-grey-dark-3); }
+  .search__input:focus + .search__button {
+    background-color: var(--color-grey-light-3); }
+  .search__button {
+    border: none;
+    background-color: var(--color-grey-light-2); }
+    .search__button:focus {
+      outline: none; }
+    .search__button:active {
+      transform: translateY(2px); }
+  .search__icon {
+    height: 2rem;
+    width: 2rem;
+    fill: var(--color-grey-dark-2); }
 
 *,
 *::after,
