--- a/client/src/res/sass/layout/_sidebar.scss
+++ b/client/src/res/sass/layout/_sidebar.scss
@@ -1,4 +1,31 @@
 .sidebar {
     background-color: var(--color-grey-dark-3);
     flex: 0 0 18%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.side-nav {
+    
+    &__item {
+
+    }
+
+    &__link {
+
+    }
+
+    &__icon {
+        
+        width: 2.75rem;
+        height: 2.75rem;
+    }
+}
+
+.legal {
+    font-size: 1.2rem;
+    text-align: center;
+    padding: 2.5rem;
+    color: var(--color-grey-light-4);
 }
