--- a/client/src/res/sass/abstracts/_variables.scss
+++ b/client/src/res/sass/abstracts/_variables.scss
@@ -15,6 +15,9 @@
     --color-grey-dark-3: #333;
 
     --shadow-dark: 0 2rem 6rem rgba(0,0,0, .3);
+    --shadow-light: 0 2rem 5rem rgba(0,0,0, .05);
+
+    --line: 3px solid var(--color-grey-light-2);
 }
 
 // COLORS
