--- a/client/src/res/sass/layout/_sidebar.scss
+++ b/client/src/res/sass/layout/_sidebar.scss
@@ -7,19 +7,63 @@
 }
 
 .side-nav {
+    list-style: none;
+    margin-top: 3.5rem;
+    font-size: 1.4rem;
     
     &__item {
+        position: relative;
+
+        &:not(:last-child) {
+            margin-bottom: .5rem;
+        }
 
     }
 
-    &__link {
+    &__item::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: .3rem;
+        background-color: var(--color-primary);
+        transform: scaleY(0);
+        transform-origin: bottom;
+        transition: transform .2s,
+                    width .4s cubic-bezier(1,0,0,1) .2s,
+                    background-color .05s;                ;
+    }
 
+    &__item:hover::before,
+    // Active page is selected here. 
+    &__item--active::before {
+        transform: scaleY(1);
+        width: 100%;
+    }
+
+    &__item:active::before {
+        background-color: var(--color-primary-light);
+    }
+
+    &__link:link,
+    &__link:visited {
+        color: var(--color-grey-light-1);
+        text-decoration: none;
+        text-transform: uppercase;
+        padding: 1.5rem 3rem;
+        display: flex;
+        align-items: center;
+        z-index: $layer-1;
+        position: relative;
     }
 
     &__icon {
-        
-        width: 2.75rem;
-        height: 2.75rem;
+        margin-right: 2rem;
+        fill: currentColor;
+        width: 1.5rem;
+        height: 1.5rem;
+
     }
 }
 
