--- a/client/src/res/sass/main.scss
+++ b/client/src/res/sass/main.scss
@@ -5,13 +5,16 @@
 
 @import "layout/container";
 @import "layout/sidebar";
-@import "layout/hotelView";
 @import "layout/content";
 @import "layout/header";
 @import "components/small-components";
 @import "components/headerProfile";
 @import "components/searchBar";
 
+@import "components/gallery-hotel";
+@import "layout/overview";
+@import "pages/hotel";
+@import "components/button-inline";
 // @import "base/animations";
 @import "base/base";
 @import "base/typography";
@@ -25,6 +28,6 @@
 // @import "components/form";
 // @import "components/popup";
 
-// @import "layout/navigation";
+@import "layout/navigation";
 // @import "layout/grid";
 // @import "layout/footer";
