--- a/client/src/res/sass/base/_animations.scss
+++ b/client/src/res/sass/base/_animations.scss
@@ -41,3 +41,20 @@
         transform: translate(0);
     }
 }
+
+@keyframes pulsate {
+    0% {
+        transform: scale(1);
+        box-shadow: none;
+    }
+
+    50% {
+        transform: scale(1.05);
+        box-shadow: var(--shadow-light);
+    }
+
+    100% {
+        transform: scale(1);
+        box-shadow: none;
+    }
+}
