--- a/client/src/res/sass/layout/_overview.scss
+++ b/client/src/res/sass/layout/_overview.scss
@@ -20,25 +20,44 @@
 
     &__icon-star,
     &__icon-location {
-        width: 1.5rem;
-        height: 1.5rem;
+        width: 1.75rem;
+        height: 1.75rem;
         fill: var(--color-primary);
 
     }
 
-    &__location {
+    &__icon-location {
+        margin-right: .5rem;
+    }
 
+    &__location {
+        font-size: 1.2rem;
+        display: flex;
+        align-items: center;
+        
     }
 
     &__rating {
-
+        background-color: var(--color-primary);
+        margin-left: 3rem;
+        color: #fff;
+        padding: 0 2.25rem;
+        align-self: stretch;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
     }
 
     &__rating-count {
-
+        font-size: .9rem;
+        text-transform: uppercase;
     }
 
     &__rating-average {
+        font-size: 2.25rem;
+        font-weight: 300;
+        margin-bottom: -.3rem;
 
     }
 }
