--- a/client/src/res/sass/main.scss
+++ b/client/src/res/sass/main.scss
@@ -15,7 +15,7 @@
 @import "layout/overview";
 @import "pages/hotel";
 @import "components/button-inline";
-// @import "base/animations";
+@import "base/animations";
 @import "base/base";
 @import "base/typography";
 // @import "pages/home";
