--- a/client/src/res/sass/pages/_hotel.scss
+++ b/client/src/res/sass/pages/_hotel.scss
@@ -1,5 +1,226 @@
 .hotel-view {
     background-color: #fff;
     flex: 1;
-    height: 50rem;
+}
+
+.hotel-details {
+    display: flex;
+    padding: 4.5rem;
+    background-color: #fff;
+    border-bottom: var(--line);
+}
+
+.description {
+    font-size: 1.4rem;
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+    padding: 3rem;
+    box-shadow: var(--shadow-light);
+}
+
+.user-reviews {
+    font-size: 1.4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+}
+
+.paragraph:not(:last-of-type) {
+    margin-bottom: 2rem;
+
+}
+
+.list {
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+    border-top: var(--line);
+    border-bottom: var(--line);
+    display: flex;
+    flex-wrap: wrap;
+    
+    &__item {
+        flex: 0 0 50%;
+        margin-bottom: .7rem;
+
+        & span {
+            color: red;
+        }
+    }
+
+    &__item::before {
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        width: 1rem;
+
+        // Older Browsers support
+        // background-image: url(../img/chevron-thin-right.svg);
+        // background-size: cover;
+
+        // Newer Browsers using Mask property
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-image: url(../img/chevron-thin-right.svg);
+        mask-size: cover;
+
+    }
+}
+
+.recommend {
+    display: flex;
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+    align-items: center;
+
+    &__count {
+        margin-right: auto;
+    }
+    
+    &__friends {
+
+    }
+
+    &__photo {
+        box-sizing: content-box;
+        background-color: var(--color-grey-light-4);
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        border: .3rem solid whitesmoke;
+
+        &:not(:last-child) {
+            margin-right: -1.15rem;
+        }
+
+    }
+}
+
+.review {
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative;
+    overflow: hidden;
+
+    &__text {
+        margin-bottom: 2rem;
+        z-index: 10;
+        position: relative;
+    }
+
+    &__user {
+        display: flex;
+        align-items: center;
+
+    }
+
+    &__photo {
+        height: 4.5rem;
+        width: 4.5rem;
+        border-radius:50%;
+        background-color: var(--color-grey-light-4);
+        margin-right: 1.5rem;
+    }
+
+    &__user-box {
+        margin-right: auto;
+
+    }
+
+    &__user-name {
+        font-size: 1.1rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        margin-bottom: .4rem;
+
+    }
+
+    &__user-date {
+        font-size: 1rem;
+        color: var(--color-grey-dark-3);
+    }
+
+    &__rating {
+        color: var(--color-primary);
+        font-size: 2.2rem;
+        font-weight: 300;
+
+    }
+    
+    &::before {
+        content: "\201c";
+        position: absolute;
+        top: -2.75rem;
+        left: -1rem;
+        line-height: 1;
+        font-size: 20rem;
+        color: var(--color-grey-light-2);
+        font-family: sans-serif;
+        z-index: $layer-G;
+    }
+
+}
+
+//Call To Action
+
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__book-now {
+        font-size: 2rem;
+        font-weight: 300;
+        text-transform: uppercase;
+    }
+}
+
+.btn {
+    font-size: 1.5rem;
+    border: none;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 10rem;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary));
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+
+    & > * {
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        transition: all .2s;
+    }
+
+    &__visible {
+        padding: 2rem 7rem;
+    }
+
+    &__invisible {
+        position: absolute;
+        padding: 2rem 0;
+        left: 0;
+        top: -100%;
+    }
+
+    &:hover {
+         background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary));
+    }
+    &:hover  &__visible {
+        transform: translateY(100%);     
+    }
+
+    &:hover  &__invisible {
+        top: 0;
+    }
+
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
 }
