--- a/client/src/res/sass/main.scss
+++ b/client/src/res/sass/main.scss
@@ -18,6 +18,9 @@
 @import "base/animations";
 @import "base/base";
 @import "base/typography";
+@import "components/button-changing";
+@import "layout/grid-hotel-details";
+@import "components/recommend-friends";
 // @import "pages/home";
 // @import "components/button";
 // @import "components/composition";
