--- a/client/src/res/sass/base/_base.scss
+++ b/client/src/res/sass/base/_base.scss
@@ -9,28 +9,17 @@
 html {
     box-sizing: border-box;
     // This defines what 1rem is
-    font-size: 62.5%; // 1rem = 10px; 10px/16px = 62.5%
+    // 1rem = 10px; 10px/16px = 62.5%
+    font-size: 62.5%; /* 10px */
     
     // Default CSS: 1200px < viewport width < 1600px
 
-    @include respond(desk-big) { // width > 1600px
-        font-size: 75%; // 1rem = 12px; 12px/16px = 75%
+    @include respond(large-2) {
+        font-size: 56.25%; /* 9px */
     }
 
-    @include respond(tab-land) { // 900 < width < 1200px 
-        font-size: 56.25%; // 1rem = 9px; 9px/16px = 56.25%
-    }
-
-    @include respond(tab-port) { // 600 < width < 900px 
-        font-size: 50%; // 1rem = 8px; 8px/16px = 50%
-    }
-
-    @include respond(phone) { // 0 < width < 600px
-        font-size: 43.75%; // 1rem = 7px; 7px/16px = 43.75%
-    }
-
-    @include respond(lightBar) { // 0 < width < 200px
-        font-size: 12.5%; // 1rem = 2px; 2px/16px = 12.5%
+    @include respond(medium-2) {
+        font-size: 50%; /* 8px */
     }
 
 }
@@ -39,12 +28,8 @@ body {
     background-image: linear-gradient(to right bottom, var(--color-primary-light),  var(--color-primary-dark));
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 0 3rem 0 3rem;
     min-height: 100vh;
 
-    @include respond(tab-port) {
-        padding: 0;
-    }  
 }
 
 ::selection {
