--- a/client/src/res/sass/layout/_overview.scss
+++ b/client/src/res/sass/layout/_overview.scss
@@ -10,6 +10,11 @@
         text-transform: uppercase;
         letter-spacing: .1rem;
         padding: 1.5rem 3rem; 
+
+        @include respond(small-1) {
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        }
     }
 
     &__stars {
@@ -47,17 +52,29 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+
+        @include respond(small-1) {
+            padding: 0 1.5rem;
+        }
     }
 
     &__rating-count {
         font-size: .9rem;
         text-transform: uppercase;
+
+        @include respond(small-1) {
+            font-size: .7rem;
+        }
     }
 
     &__rating-average {
         font-size: 2.25rem;
         font-weight: 300;
         margin-bottom: -.3rem;
+
+        @include respond(small-1) {
+            font-size: 1.8rem;
+        }
 
     }
 }
