--- a/client/src/res/sass/layout/_sidebar.scss
+++ b/client/src/res/sass/layout/_sidebar.scss
@@ -11,11 +11,24 @@
     margin-top: 3.5rem;
     font-size: 1.4rem;
     
+    @include respond(medium-1) {
+        display: flex;
+        margin: 0;
+    }
+    
     &__item {
         position: relative;
 
+        @include respond(medium-1) {
+            flex: 1;
+        }
+    
         &:not(:last-child) {
             margin-bottom: .5rem;
+
+            @include respond(medium-1) {
+                margin: 0;
+            }       
         }
 
     }
@@ -23,23 +36,39 @@
     &__item::before {
         content: "";
         position: absolute;
-        top: 0;
+        bottom: 0;
         left: 0;
-        height: 100%;
         width: .3rem;
+        height: 100%;
         background-color: var(--color-primary);
+
         transform: scaleY(0);
         transform-origin: bottom;
         transition: transform .2s,
                     width .4s cubic-bezier(1,0,0,1) .2s,
-                    background-color .05s;                ;
+                    height .4s cubic-bezier(1,0,0,1) .2s,
+                    background-color .05s;                
+        
+        // Define move up animation height start point to 0.3rem.
+        @include respond(medium-1) {
+            width: 100% ;
+            height: .3rem ;
+        }
     }
 
     &__item:hover::before,
     // Active page is selected here. 
     &__item--active::before {
+
+        // Scale animation on hover in desktop mode. From left to right using width 0 to 100%.
         transform: scaleY(1);
         width: 100%;
+
+        // Move up animation on hover - navigation menu links. from bottom to top using height 0 to 100%.
+        @include respond(medium-1) {
+            height: 100%;
+            width: 100%;
+        }
     }
 
     &__item:active::before {
@@ -56,6 +85,20 @@
         align-items: center;
         z-index: $layer-1;
         position: relative;
+
+        @include respond(medium-1) {
+            justify-content: center;
+            padding: 2rem;
+        }
+
+        @include respond(small-2) {
+            flex-direction: column;
+            padding: 1.5rem .25rem;
+            
+            & span {
+                display: none;
+            }
+        }
     }
 
     &__icon {
@@ -64,7 +107,14 @@
         width: 1.5rem;
         height: 1.5rem;
 
+        @include respond(small-2) {
+            margin-right: 0;
+            
+            width: 2.5rem;
+            height: 2.5rem;
+        }
     }
+
 }
 
 .legal {
@@ -72,4 +122,9 @@
     text-align: center;
     padding: 2.5rem;
     color: var(--color-grey-light-4);
+
+    @include respond(medium-1) {
+        display: none;
+    }
+    
 }
