--- a/client/src/res/sass/pages/_hotel.scss
+++ b/client/src/res/sass/pages/_hotel.scss
@@ -1,30 +1,3 @@
-.hotel-view {
-    background-color: #fff;
-    flex: 1;
-}
-
-.hotel-details {
-    display: flex;
-    padding: 4.5rem;
-    background-color: #fff;
-    border-bottom: var(--line);
-}
-
-.description {
-    font-size: 1.4rem;
-    flex: 0 0 60%;
-    margin-right: 4.5rem;
-    padding: 3rem;
-    box-shadow: var(--shadow-light);
-}
-
-.user-reviews {
-    font-size: 1.4rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex: 1;
-}
 
 .paragraph:not(:last-of-type) {
     margin-bottom: 2rem;
@@ -56,45 +29,22 @@
         width: 1rem;
 
         // Older Browsers support
-        // background-image: url(../img/chevron-thin-right.svg);
-        // background-size: cover;
-
+        // Graceful degradation for older browsers support.
+        background-image: url(../img/chevron-thin-right.svg);
+        background-size: cover;
+        
         // Newer Browsers using Mask property
-        background-color: var(--color-primary);
-        -webkit-mask-image: url(../img/chevron-thin-right.svg);
-        -webkit-mask-size: cover;
-        mask-image: url(../img/chevron-thin-right.svg);
-        mask-size: cover;
-
-    }
-}
-
-.recommend {
-    display: flex;
-    font-size: 1.3rem;
-    color: var(--color-grey-dark-3);
-    align-items: center;
-
-    &__count {
-        margin-right: auto;
-    }
-    
-    &__friends {
-
-    }
-
-    &__photo {
-        box-sizing: content-box;
-        background-color: var(--color-grey-light-4);
-        height: 4rem;
-        width: 4rem;
-        border-radius: 50%;
-        border: .3rem solid whitesmoke;
-
-        &:not(:last-child) {
-            margin-right: -1.15rem;
+        // This feature query is to check whether the browser supports the mask feature or not. if yes then Use it.
+        @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+            background-color: var(--color-primary);
+            -webkit-mask-image: url(../img/chevron-thin-right.svg);
+            -webkit-mask-size: cover;
+            mask-image: url(../img/chevron-thin-right.svg);
+            mask-size: cover;
+            // Remove the old-support background image to remove conflict in newer browsers.
+            background-image: none;
         }
-
+        
     }
 }
 
@@ -105,16 +55,34 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+    
+    @include respond(small-1) {
+        padding: 10rem;
+        margin-bottom: 3rem;
+        
+    }
 
     &__text {
         margin-bottom: 2rem;
         z-index: 10;
         position: relative;
+
+        @include respond(small-1) {
+            font-size: 1.8rem;
+            text-align: center;
+            
+        }
     }
 
     &__user {
         display: flex;
         align-items: center;
+         
+        @include respond(small-1) {
+            justify-content: center;;
+            text-align: center;
+            
+        }
 
     }
 
@@ -124,14 +92,27 @@
         border-radius:50%;
         background-color: var(--color-grey-light-4);
         margin-right: 1.5rem;
+
+        @include respond(small-1) {
+            margin-right: 0;
+            margin-bottom: .7rem;
+            order: 0;
+            
+        }
     }
 
     &__user-box {
         margin-right: auto;
 
+        @include respond(small-1) {
+            order: -1;
+            margin-right: 1rem;
+        }
+
     }
 
     &__user-name {
+        
         font-size: 1.1rem;
         font-weight: 600;
         text-transform: uppercase;
@@ -148,6 +129,13 @@
         color: var(--color-primary);
         font-size: 2.2rem;
         font-weight: 300;
+
+        @include respond(small-1) {
+            margin-right: 0rem;
+            margin-left: 1rem;
+            font-size: 2.8rem;
+            
+        }
 
     }
     
@@ -171,56 +159,13 @@
     padding: 3.5rem 0;
     text-align: center;
 
+    @include respond(medium-1) {
+        padding: 2.5rem 0;
+    }
+
     &__book-now {
         font-size: 2rem;
         font-weight: 300;
         text-transform: uppercase;
-    }
-}
-
-.btn {
-    font-size: 1.5rem;
-    border: none;
-    font-weight: 300;
-    text-transform: uppercase;
-    border-radius: 10rem;
-    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary));
-    color: #fff;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-
-    & > * {
-        display: inline-block;
-        height: 100%;
-        width: 100%;
-        transition: all .2s;
-    }
-
-    &__visible {
-        padding: 2rem 7rem;
-    }
-
-    &__invisible {
-        position: absolute;
-        padding: 2rem 0;
-        left: 0;
-        top: -100%;
-    }
-
-    &:hover {
-         background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary));
-    }
-    &:hover  &__visible {
-        transform: translateY(100%);     
-    }
-
-    &:hover  &__invisible {
-        top: 0;
-    }
-
-    &:focus {
-        outline: none;
-        animation: pulsate 1s infinite;
     }
 }
